ocelot and configuration

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -1,9 +1,19 @@
 ﻿{
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "153774909074-0l0dbfeum802hf7oi9sfe7g1u3024ou5.apps.googleusercontent.com",
+      "ClientSecret": "A69iy4z4jMG-x8OpyLfr7QFy"
+    }
+  },
+  "ServiceEndpoints": {
+    "UserService": "http://http.TCP.userservice.default.svc.cluster.local"
+    //"UserService": "http://10.109.206.70"
   }
 }
