--- a/appsettings.json
+++ b/appsettings.json
@@ -1,16 +1,17 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "Authentication": {
-    "Google": {
-      "ClientId": "153774909074-0l0dbfeum802hf7oi9sfe7g1u3024ou5.apps.googleusercontent.com",
-      "ClientSecret": "A69iy4z4jMG-x8OpyLfr7QFy"
-    }
+  "ConnectionStrings": {
+    "ElasticSearchServerAddress": "http://localhost:9200"
+  },
+  "ServiceEndpoints": {
+    "UserService": "https://localhost:44305",
+    "MatchmakingService": "https://localhost:44383"
   }
 }
