made everything read from the config files

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,16 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "ElasticSearchServerAddress": "http://localhost:9200"
+  },
+  "ServiceEndpoints": {
+    "UserService": "https://localhost:44305",
+    "MatchmakingService": "https://localhost:44383"
+  },
+  "AllowedHosts": [
+    "http://localhost:3000",
+    "https://localhost:3000"
+  ]
 }
