--- a/appsettings.json
+++ b/appsettings.json
@@ -3,15 +3,15 @@
     "LogLevel": {
       "Default": "Debug",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Warning"
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "Ocelot.": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ElasticSearchServerAddress": "http://localhost:9200"
+  "Authentication": {
+    "Google": {
+      "ClientId": "528681707440-ge9ald71a4gdakd20vbrus84q1hjid52.apps.googleusercontent.com",
+      "ClientSecret": "oTPjNSRP_CBP6kuaSvDDqzaj"
+    }
   },
-  "ServiceEndpoints": {
-    "UserService": "https://localhost:44305",
-    "MatchmakingService": "https://localhost:44383"
-  }
+  "AllowedHosts": "*"
 }
