--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -6,8 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ServiceEndpoints": {
-    "UserService": "http://http.TCP.userservice.default.svc.cluster.local"
+  "ServiceEndpoints": { //http://http.TCP.userservice.default.svc.cluster.local
+    "UserService": "http://userservice:6001",
+    "MatchmakingService": "http://matchmakingservice:6021",
+    "GameService": "http://gameservice:6031",
+    "ChatService": "http://chatservice:6051"
   },
   "AllowedHosts": [
     "http://letschess.nl",
