matchmaking works realtime with rabbitMQ

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,10 +11,15 @@
   },
   "ServiceEndpoints": {
     "UserService": "https://localhost:44305",
-    "MatchmakingService": "https://localhost:44383"
+    "MatchmakingService": "https://localhost:44383",
+    "MQ": "localhost:5672"
   },
   "AllowedHosts": [
     "http://localhost:3000",
     "https://localhost:3000"
-  ]
+  ],
+  "MQCredentials": {
+    "Username": "letschess",
+    "Password": "ht4boiuehgjofmcjhyudi"
+  }
 }
