--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,17 @@
       "Ocelot.": "Information"
     }
   },
+  "ConnectionStrings": {
+    "ElasticSearchServerAddress": "http://elasticsearch:9200"
+  },
   "Authentication": {
     "Google": {
       "ClientId": "528681707440-ge9ald71a4gdakd20vbrus84q1hjid52.apps.googleusercontent.com",
       "ClientSecret": "oTPjNSRP_CBP6kuaSvDDqzaj"
     }
+  },
+  "MQCredentials": {
+
   },
   "AllowedHosts": "*"
 }
