--- a/LetsChess-Backend.csproj
+++ b/LetsChess-Backend.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="NLog.Targets.ElasticSearch" Version="7.5.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0" />
     <PackageReference Include="ocelot" Version="17.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
