--- a/nlog.config
+++ b/nlog.config
@@ -7,19 +7,15 @@
   </extensions>
   <targets>
     <!--ElasticSearch Save log information-->
-    <target name="ElasticSearch" xsi:type="ElasticSearch" ConnectionStringName="ElasticSearchServerAddress"
-            index="letschess-be-${date:format=yyyy.MM.dd}" documentType="doc" includeAllProperties="true"
-                 layout="[${date:format=yyyy-MM-dd HH\:mm\:ss}][${level}] ${logger} ${message} ${exception:format=toString}">
-      <field name="MachineName" layout="${machinename}" />
-      <field name="Time" layout="${longdate}" />
-      <field name="level" layout="${level:uppercase=true}" />
-      <field name="logger" layout=" ${logger}" />
-      <field name="message" layout=" ${message}" />
-      <field name="exception" layout=" ${exception:format=toString}" />
-      <field name="processid" layout=" ${processid}" />
-      <field name="threadname" layout=" ${threadname}" />
-      <field name="stacktrace" layout=" ${stacktrace}" />
-      <field name="Properties" layout="${machinename} ${longdate} ${level:uppercase=true} ${logger} ${message} ${exception}|${processid}|${stacktrace}|${threadname}" />
+    <target name="ElasticSearch" xsi:type="BufferingWrapper" flushTimeout="5000">
+      <target xsi:type="ElasticSearch" index="letschess-be-${date:format=yyyy.MM.dd}" documentType="doc"  uri="http://elasticsearch:9200" layout="[${date:format=yyyy-MM-dd HH\:mm\:ss}][${level}] ${logger} ${message} ${exception:format=toString}">
+        <field name="Time" layout="${longdate}" />
+        <field name="level" layout="${level:uppercase=true}" />
+        <field name="logger" layout=" ${logger}" />
+        <field name="message" layout=" ${message}" />
+        <field name="exception" layout=" ${exception:format=toString}" />
+        <field name="stacktrace" layout=" ${stacktrace}" />
+      </target>
     </target>
   </targets>
   <rules>
