takemove, fixed double acknowledge bug what caused the mq to shut down

--- a/LetsChess-Backend.csproj
+++ b/LetsChess-Backend.csproj
@@ -30,9 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="nlog.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <ProjectReference Include="..\LetsChess.Models\LetsChess.Models.csproj" />
   </ItemGroup>
 
 </Project>
