--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,12 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "ElasticSearchServerAddress": "http://localhost:9200"
+    "MQ": "localhost:5672"
   },
   "ServiceEndpoints": {
     "UserService": "https://localhost:44305",
     "MatchmakingService": "https://localhost:44383",
-    "MQ": "localhost:5672"
+    "GameService": "https://localhost:44369"
   },
   "AllowedHosts": [
     "http://localhost:3000",
