--- a/appsettings.json
+++ b/appsettings.json
@@ -7,9 +7,6 @@
       "Ocelot.": "Information"
     }
   },
-  "ConnectionStrings": {
-    "ElasticSearchServerAddress": "http://elasticsearch:9200"
-  },
   "Authentication": {
     "Google": {
       "ClientId": "528681707440-ge9ald71a4gdakd20vbrus84q1hjid52.apps.googleusercontent.com",
@@ -19,5 +16,59 @@
   "MQCredentials": {
 
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NLog": {
+    "internalLogLevel": "Info",
+    "internalLogFile": "c:\\temp\\internal-nlog.txt",
+    "extensions": {
+      "NLog.Web.AspNetCore": {
+        "assembly": "NLog.Web.AspNetCore"
+      }
+    },
+    "targets": {
+      "ElasticSearch": {
+        "type": "ElasticSearch",
+        "index": "letschess-be-${date:format=yyyy.MM.dd}",
+        "uri": "http://localhost:9200",
+        "layout": "[${date:format=yyyy-MM-dd HH\\:mm\\:ss}][${level}] ${logger} ${message} ${exception:format=toString}",
+        "fields": [
+          {
+            "Name": "time",
+            "Layout": "${longdate}"
+          },
+          {
+            "Name": "level",
+            "Layout": "${level:uppercase=true}"
+          },
+          {
+            "Name": "logger",
+            "Layout": "${logger}"
+          },
+          {
+            "Name": "message",
+            "Layout": "${message}"
+          },
+          {
+            "Name": "exception",
+            "Layout": "${exception:format=toString}"
+          },
+          {
+            "Name": "stacktrace",
+            "Layout": "${stacktrace}"
+          }
+        ]
+      }
+    },
+    "AllowedHosts": [
+      "http://letschess.nl",
+      "https://letschess.nl"
+    ],
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "ElasticSearch"
+      }
+    ]
+  }
 }
