--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -7,17 +7,24 @@
     }
   },
   "ConnectionStrings": {
-    "ElasticSearchServerAddress": "http://elasticsearch.letschess.svc.cluster.local:9200"
+
   },
-  "ServiceEndpoints": { //http://http.TCP.userservice.default.svc.cluster.local
+  "ServiceEndpoints": {
     "UserService": "http://userservice:6001",
     "MatchmakingService": "http://matchmakingservice:6021",
-    "GameService": "https://gameservice:6031",
-    "ChatService": "https://chatservice:6051",
+    "GameService": "http://gameservice:6031",
+    "ChatService": "http://chatservice:6051",
     "MQ": "http://letschess-mq:5672"
   },
   "AllowedHosts": [
     "http://letschess.nl",
     "https://letschess.nl"
-  ]
+  ],
+  "NLog": {
+    "targets": {
+      "ElasticSearch": {
+        "uri": "http://elasticsearch:9200"
+      }
+    }
+  }
 }
