updated dockerfile to simplify and now loads shared assemblies to

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -7,14 +7,18 @@
     }
   },
   "ConnectionStrings": {
-
+    "MQ": "http://letschess-mq:5672"
+  },
+  "MQCredentials": {
+    "Username": "letschess",
+    "Password": "ht4boiuehgjofmcjhyudi"
   },
   "ServiceEndpoints": {
     "UserService": "http://userservice:6001",
     "MatchmakingService": "http://matchmakingservice:6021",
     "GameService": "http://gameservice:6031",
     "ChatService": "http://chatservice:6051",
-    "MQ": "http://letschess-mq:5672"
+    
   },
   "AllowedHosts": [
     "http://letschess.nl",
