--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,8 @@
     }
   },
   "MQCredentials": {
-
+    "Username": "letschess",
+    "Password": "ht4boiuehgjofmcjhyudi"
   },
   "AllowedHosts": [
     "http://letschess.nl",
