--- a/LetsChess-Backend.csproj
+++ b/LetsChess-Backend.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LetsChess.Models\LetsChess.Models.csproj" />
+    <ProjectReference Include="..\shared\LetsChess.Models\LetsChess.Models.csproj" />
   </ItemGroup>
 
 </Project>
