--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -17,8 +17,7 @@
     "UserService": "http://userservice:6001",
     "MatchmakingService": "http://matchmakingservice:6021",
     "GameService": "http://gameservice:6031",
-    "ChatService": "http://chatservice:6051",
-    
+    "ChatService": "http://chatservice:6051"
   },
   "AllowedHosts": [
     "http://letschess.nl",
