--- a/.github/workflows/build and test.yml
+++ b/.github/workflows/build and test.yml
@@ -1,16 +1,14 @@
-name: .NET
+name: Build_and_test_app
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, development ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, development ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
