--- a/.github/workflows/delivery_to_dockerhub.yml
+++ b/.github/workflows/delivery_to_dockerhub.yml
@@ -1,9 +1,12 @@
 name: Continious delivery to Docker hub
 on:
   pull_request:
+    types:
+      - closed
     branches: [ releases/** ]
 jobs:
   push_to_registry:
+    if: github.event.pull_request.merged == 'true'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -18,4 +21,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: sacation/letschess-backend:${{ github.ref }}
+          tags: sacation/letschess-backend:${{ github.base_ref }}
