--- a/.github/workflows/delivery_to_dockerhub.yml
+++ b/.github/workflows/delivery_to_dockerhub.yml
@@ -1,8 +1,6 @@
 name: Continious delivery to Docker hub
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches: [ releases/** ]
 jobs:
   push_to_registry:
@@ -22,3 +20,4 @@ jobs:
         with:
           push: true
           tags: sacation/letschess-backend:${{ github.base_ref }}
+          
