--- a/.github/workflows/delivery_to_dockerhub.yml
+++ b/.github/workflows/delivery_to_dockerhub.yml
@@ -18,4 +18,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: sacation/letschess-backend:${{ github.base_ref }}
+          tags: sacation/letschess-backend:${{ cut -d "/" -f4 <<< "refs/heads/releases/1.0.0"  }}
