--- a/.github/workflows/delivery_to_dockerhub.yml
+++ b/.github/workflows/delivery_to_dockerhub.yml
@@ -16,6 +16,8 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
+        env:
+          TAG: ${{ cut -d "/" -f4 <<< "refs/heads/releases/1.0.0" }}
         with:
           push: true
-          tags: sacation/letschess-backend:${{ cut -d "/" -f4 <<< "refs/heads/releases/1.0.0"  }}
+          tags: sacation/letschess-backend:${{ TAG }}
