--- a/.github/workflows/delivery_to_dockerhub.yml
+++ b/.github/workflows/delivery_to_dockerhub.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         env:
-          TAG: ${{ "refs/heads/releases/1.0.0".split("/")[0] }}
+          TAG: ${"refs/heads/releases/1.0.0".split("/")}
         with:
           push: true
           tags: sacation/letschess-backend:${{ env.TAG }}
