--- a/.github/workflows/delivery_to_dockerhub.yml
+++ b/.github/workflows/delivery_to_dockerhub.yml
@@ -16,8 +16,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: sacation/letschess-backend:${{ github.base_ref }}
+          tags: sacation/letschess-backend:${{ steps.extract_branch.outputs.branch }}
